--- a/import.yaml
+++ b/import.yaml
@@ -37,7 +37,7 @@ paths:
                         type: string
                         example: "CO"
         400:
-          description: Invalid ZIP
+          description: Invalimd ZIP
   /shipping-zones-by-zip/{zip}:
     parameters:
       - name: zip
@@ -93,8 +93,6 @@ paths:
         explode: false
     post:
       description: |
-        Delivery to Alaska (AK) is not available.
-      
         Create a package and register it in USPS
         
         HAWB
@@ -361,8 +359,8 @@ paths:
                           properties:
                             event_date:
                               type: string
-                              format: datetime
-                              example: "2002-10-02 10:00:00"
+                              format: datetime # RFC3339
+                              example: "2002-10-02T10:00:00-05:00"
                             location:
                               type: string
                               example: "712019998, MONROE, LA, BREARD CARR-DELV"
@@ -401,8 +399,10 @@ paths:
     post:
       description: |
         Creates a manifest
+        
         Validating MAWBs
         ================
+        
         The IATA and US Customs rules for IATA MAWB's require that all MAWB's have a three digit Airline prefix and then eight digits. Those eight digits are a seven digit serial number and a mod 7 (unweighted) check digit.
         Using the MAWB 180-62148741 as the example, the airline prefix is 180, the seven digit serial number is 6214874, and the check digit is a 1.
         To confirm that 1 is the correct mod 7 check digit, you can determine the check digit two different ways. Method one:
