--- a/import.yaml
+++ b/import.yaml
@@ -37,7 +37,9 @@ paths:
                         type: string
                         example: "CO"
         400:
-          description: Invalimd ZIP
+          description: Invalid ZIP format
+        404:
+          description: ZIP is not found
   /shipping-zones-by-zip/{zip}:
     parameters:
       - name: zip
@@ -77,7 +79,9 @@ paths:
                           type: integer
                           example: 7
         400:
-          description: Invalid ZIP
+          description: Invalid ZIP format
+        404:
+          description: ZIP is not found
   /packages:
     parameters:
       - name: exclude
