--- a/import.yaml
+++ b/import.yaml
@@ -491,6 +491,18 @@ paths:
       responses:
         '201':
           description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: object
+                    properties:
+                      id:
+                        description: Created manifest ID
+                        type: string
+                        format: uuid
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
